--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ local.properties
 *.sln.docstates
 *.pubxml
 
+
 # Build results
 [Dd]ebug/
 [Rr]elease/
@@ -63,6 +64,7 @@ local.properties
 *.vspscc
 .builds
 *.dotCover
+*.min.js
 
 ## TODO: If you have NuGet Package Restore enabled, uncomment this
 #packages/
