Health tracking added
The health of entities is tracked and when an entity dies it is removed
from the screen.

--- a/Site/Site.csproj
+++ b/Site/Site.csproj
@@ -261,6 +261,13 @@
     <Content Include="Scripts\Game\Entity.min.js">
       <DependentUpon>Entity.ts</DependentUpon>
     </Content>
+    <TypeScriptCompile Include="Scripts\Game\EntityStatusView.ts" />
+    <Content Include="Scripts\Game\EntityStatusView.js">
+      <DependentUpon>EntityStatusView.ts</DependentUpon>
+    </Content>
+    <Content Include="Scripts\Game\EntityStatusView.min.js">
+      <DependentUpon>EntityStatusView.ts</DependentUpon>
+    </Content>
     <Content Include="Scripts\Game\GameBoard.js">
       <DependentUpon>GameBoard.ts</DependentUpon>
     </Content>
